WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
36447
[Qt] Fix qdoc warnings
https://bugs.webkit.org/show_bug.cgi?id=36447
Summary
[Qt] Fix qdoc warnings
Kent Hansen
Reported
2010-03-22 09:55:34 PDT
/home/khansen/dev/webkit/WebKit/qt/Api/qgraphicswebview.cpp:1048: Cannot link to 'QWebPage::setPreferredContentsSize' in QGraphicsWebView::resizesToContents /home/khansen/dev/webkit/WebKit/qt/Api/qwebsettings.cpp:980: Undocumented parameter 'location' in QWebSettings::setInspectorUrl() /home/khansen/dev/webkit/WebKit/qt/Api/qwebframe.cpp:886: No such parameter 'url' in QWebFrame::load()
Attachments
Proposed patch
(2.24 KB, patch)
2010-03-22 10:02 PDT
,
Kent Hansen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kent Hansen
Comment 1
2010-03-22 10:02:16 PDT
Created
attachment 51299
[details]
Proposed patch
Laszlo Gombos
Comment 2
2010-03-22 10:46:08 PDT
Comment on
attachment 51299
[details]
Proposed patch LGTM, r+. Thanks.
WebKit Commit Bot
Comment 3
2010-03-22 18:31:36 PDT
Comment on
attachment 51299
[details]
Proposed patch Clearing flags on attachment: 51299 Committed
r56373
: <
http://trac.webkit.org/changeset/56373
>
WebKit Commit Bot
Comment 4
2010-03-22 18:31:40 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug