2010-03-22  Kent Hansen  <kent.hansen@nokia.com>

Reviewed by Laszlo Gombos.

        [Qt] Fix qdoc warnings
        https://bugs.webkit.org/show_bug.cgi?id=36447

        * Api/qgraphicswebview.cpp: Add missing ().
        * Api/qwebframe.cpp: Remove reference to non-existent parameter "url".
        * Api/qwebsettings.cpp:  Document parameter "location".

Canonical link: https://commits.webkit.org/47667@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56373 268f45cc-cd09-0410-ab3c-d52691b4dbfc